Update to 1.21.2 / 1.21.3